ok, this is chaos, i know. gotta learn to commit properly

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Knockout!</title>
         <link href="css/framework.css" type="text/css" rel="stylesheet">
+        <script src="script/lib/socket.io.js"></script>
+        <script src="script/lib/raphael.js"></script>
         <script src="script/require.js"></script>
         <script>require(["app"], function(app){
           app.run();
