put the svg stuff in separate repo. Fixed loading of stylesheets for widgets. Fixed editing primitive collections on models

--- a/script/widgets/cv-custom/cv-custom.html
+++ b/script/widgets/cv-custom/cv-custom.html
@@ -1,19 +1,17 @@
 <h1 id="thename">${name}</h1>
 <div class="main">
-  <p>
-    ${introduction}
-  </p>
+  <p>${introduction}</p>
   <div class="projects">
     <div partial="project" each="project in projects">
         <h2>${project.customerName}, ${project.title}</h2>
         <p>${project.description}</p>
     </div>
   </div>
-
-  <a class="add-project" style="display:none" href="cv-custom/projects/add">Add project</a>
+  <a class="add-project" style="display:none;" href="cv-custom/projects/add">Add project</a>
 </div>
-<div class="side">
-  <ul>
-    <li each="skill in skills">${skill}</li>
+
+<div class="sidebar">
+  <ul each="skill in skills">
+    <li>${skill}</li>
   </ul>
 </div>
